--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -14,11 +14,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "cross-env": "^5.2.0",
-    "express": "^4.16.4",
+    "@nuxtjs/apollo": "^4.0.0-rc7",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
-    "nuxt": "^2.0.0"
+    "@nuxtjs/redirect-module": "^0.2.0",
+    "@nuxtjs/style-resources": "^0.1.2",
+    "cross-env": "^5.2.0",
+    "express": "^4.16.4",
+    "nuxt": "^2.0.0",
+    "nuxt-vuex-router-sync": "0.0.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
