--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -5,10 +5,15 @@
   "author": "2wav inc.",
   "private": true,
   "scripts": {
+    "gen-schema-sdl": "npx get-graphql-schema http://localhost:8080/graphql > schema.gql",
+    "gen-schema-json": "npx get-graphql-schema http://localhost:8080/graphql --json > apollo/client-configs/schema.json",
+    "gen-schema-json-prod": "npx get-graphql-schema https://wp.huntillinois.org/graphql --json > apollo/client-configs/schema.json",
+    "fragments": "node fragments.js",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "test": "jest",
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev-watch": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "npm run gen-schema-json && npm run fragments && npm run dev-watch",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
