--- a/nuxt/package.json
+++ b/nuxt/package.json
@@ -28,11 +28,12 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
     "lodash": "^4.17.15",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.9.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
     "@nuxtjs/eslint-module": "^0.0.1",
+    "@nuxtjs/tailwindcss": "^1.1.2",
     "@vue/cli-shared-utils": "^3.8.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
